--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.56.0",
+    "dotenv": "^17.2.1",
     "lucide-react": "^0.344.0",
     "mammoth": "^1.10.0",
     "openai": "^5.16.0",
